fixed navbar styling on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,6 @@
 
 @media screen and (max-width: 600px) {
   .container {
-    margin: 0 2rem;
+    margin: 0 1rem;
   }
 }
